--- a/ballot-ui/src/core.css
+++ b/ballot-ui/src/core.css
@@ -5,10 +5,13 @@
 
     /* Larger spacing for larger app areas, like panels and page paddings */
     --section-vertical-space: 35px;
+    --section-vertical-space-mobile: 15px;
 
     /* Standard spacing for individual elements and lists */
     --control-vertical-space: 15px;
+    --control-vertical-space-mobile: 10px;
     --control-horizontal-space: 20px;
+    --control-horizontal-space-mobile: var(--control-vertical-space-mobile);
 
     --success-font-color: #82da5f;
     --success-background-color: #377a1c;
@@ -111,7 +114,7 @@ form {
 }
 
 .form input[type='text'] {
-    width: 400px;
+    width: 300px;
     height: calc(1.5em + 0.75rem + 2px);
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
