--- a/ballot-ui/src/views/vote.css
+++ b/ballot-ui/src/views/vote.css
@@ -3,6 +3,8 @@
     grid-auto-rows: max-content;
     row-gap: var(--section-vertical-space);
 }
+
+
 #voteHeader {
     margin-top: var(--section-vertical-space);
     display: grid;
@@ -51,7 +53,7 @@
 #startMessage,
 #observerMessage {
     width: 100%;
-    line-height: 2.2em;
+    line-height: 1.6em;
     text-align: center;
     color: white;
     background-color: rgba(0, 0, 0, 0.3);
@@ -109,4 +111,62 @@
     transition: all 0.5s ease-in-out;
     animation: blink normal 3s infinite ease-in-out;
     letter-spacing: 1px;
+}
+
+@media (max-width: 700px) {
+    #voteContainer {
+        display: grid;
+        grid-auto-rows: max-content;
+        row-gap: var(--section-vertical-space-mobile);
+    }
+
+    #voteHeader {
+        margin-top: var(--control-vertical-space-mobile);
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
+        row-gap: var(--control-vertical-space-mobile);
+    }
+
+    #startMessage,
+    #observerMessage {
+        font-size: .9em;
+    }
+
+    #prompt span.pick-a-card {
+        padding: 5px 5px 5px 5px;
+
+    }
+
+    #cards {
+        padding-left: var(--control-horizontal-space-mobile);
+        padding-right: var(--control-horizontal-space-mobile);
+        row-gap: var(--control-vertical-space-mobile);
+        column-gap: var(--control-horizontal-space-mobile);
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-auto-rows: auto;
+    }
+
+    .btn.estimate {
+        height: 70px;
+    }
+
+    #tally {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-right: var(--control-horizontal-space-mobile);
+        margin-left: var(--control-horizontal-space-mobile);
+    }
+
+    #tally span {
+        display: grid;
+        border: 2px solid #ffc107;
+        place-items: center;
+        grid-column: 1;
+        width: 100%;
+        padding: 20px;
+        border-radius: 7px;
+        font-size: 2em;
+        font-weight: bold;
+    }
 }
